# symmetrical-doodle

./: README.md  adb_tunnel.py  adblib.py  config.py  control_message.py  controllers.py  coords.py  device_message.py  input_events.py  mouse_inject.py  mouse_processor.py  options.py  pyproject.toml  receivers.py  scrcpy.py  servers.py
.github/workflows/: python-app.yml
android/: keycodes.py
sdl2/: mouse.py
src/symmetrical_doodle/: adb_tunnel.py  cli.py  config.py  control_message.py  controllers.py  decoders.py  demuxers.py  device_message.py  input_events.py  mouse_inject.py  options.py  packet_mergers.py  packets.py  receivers.py  scrcpy.py  servers.py  tasks.py
src/symmetrical_doodle/adb/: __init__.py  utils.py
src/symmetrical_doodle/android/: input.py
src/symmetrical_doodle/screens/: cv2_screens.py  pyside_screens.py
src/symmetrical_doodle/utils/: buffer.py  common.py  internal.py  str.py
symmetrical_doodle/: adb_tunnel.py  cli.py  control_message.py  controllers.py  decoders.py  demuxers.py  input_events.py  mouse_inject.py  options.py  receivers.py  scrcpy.py  servers.py
symmetrical_doodle/adb/: __init__.py  utils.py
symmetrical_doodle/screens/: cv2_screens.py
symmetrical_doodle/utils/: __init__.py  conection.py  str.py
tests/: test_adb.py  test_adb_utils.py  test_buffer_util.py  test_control_message.py  test_device_message.py  test_str.py  test_symmetrical_doodle.py
util/: buffer_util.py  str.py  util.py
