[project]
name = "symmetrical-doodle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.0.1",
    "numpy>=2.2.0",
]

[project.optional-dependencies]
pyside = [
    "pyside6>=6.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "toml>=0.10.2",
]

[tool.black]
skip-magic-trailing-comma = true
